# versiontheca

./: CMakeLists.txt  README.md  TODO.md  seed.txt
cmake/: CMakeLists.txt  VersionthecaConfig.cmake
debian/: changelog  control  copyright  versiontheca-doc.doc-base
doc/: .versiontheca.1.swp  CMakeLists.txt  versiontheca.1  versiontheca.doxy.in
tests/: CMakeLists.txt  catch_basic.cpp  catch_debian.cpp  catch_decimal.cpp  catch_main.cpp  catch_main.h  catch_part.cpp  catch_roman.cpp  catch_rpm.cpp  catch_unicode.cpp  catch_version.cpp
tools/: CMakeLists.txt  versiontheca.cpp
versiontheca/: CMakeLists.txt  basic.cpp  basic.h  debian.cpp  debian.h  debian_order.cpp  decimal.cpp  decimal.h  exception.h  part.cpp  part.h  roman.cpp  roman.h  rpm.cpp  rpm.h  rpm_order.cpp  trait.cpp  trait.h  unicode.h  version.cpp  version.h.in  versiontheca.cpp  versiontheca.h
